# pypack

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: feature.md
MCpypack.egg-info/: PKG-INFO  SOURCES.txt
pypack/core/: datapack.py
src/MCpypack/: __init__.py
src/MCpypack.egg-info/: SOURCES.txt  top_level.txt
src/MCpypack/core/: __init__.py  datapack.py  namespace.py  valid.py
src/MCpypack/item/: __init__.py  create.py  create_damage_types.py  create_enchantments.py  create_items.py  create_jukebox_songs.py  create_tags.py  create_trim_material.py  create_trim_patterns.py
src/MCpypack/recipe/: __init__.py  blasting.py  campfire_cooking.py  category.py  crafting_decorated_pot.py  crafting_shaped.py  crafting_shapeless.py  crafting_transmute.py  furnace.py  recipe.py  smelting.py  smithing.py  smoking.py  stonecutting.py
src/MCpypack/utils/: __init__.py  category.py  color.py  experience.py  group.py  item_stack.py  rarity.py  result.py  swing_animation.py  text.py  times.py
test/: TESTS.md
test/core/: test_datapack.py  test_namespace.py
test/item/components/: test_attack_range.py  test_base_color.py  test_bucket_entity_data.py  test_bundle_contents.py  test_charged_projectiles.py  test_components.py  test_glider.py  (+11 more)
test/recipe/: test_campfire_cooking.py  test_crafting_decorated_pot.py  test_crafting_transmute.py  test_stonecutting.py
test/utils/: test_color.py  test_item_stack.py  test_result.py  test_swing_animation.py
(+56 files in other folders)
