[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MCpypack"
version = "0.4.0"
description = "Python library for easy creation of Minecraft datapacks"
authors = [
    {name = "Morten Barthel"}
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = ["packaging>=26.0,"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["MCpypack", "MCpypack.*"]
